--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --my-color: #fff;
+}
+[data-theme="dark"] {
+  --my-color: #000;
+}
+
+body {
+  background-color: var(--my-color);
+}
